--- a/app/src/main/res/layout/fragment_syllabus_upload_fragment.xml
+++ b/app/src/main/res/layout/fragment_syllabus_upload_fragment.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:textColorHint="@color/MySECcolor"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heading_upload">
@@ -40,7 +41,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        style="@style/Widget.AppCompat.Button.Colored"
+        android:background="@color/MySECcolor"
+        android:textColor="#ffff"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/file_name_lv"
