--- a/app/src/main/res/layout/list_layout_syllabus.xml
+++ b/app/src/main/res/layout/list_layout_syllabus.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/MySECcolor"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,8 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="0dp"
+        android:background="@color/MySECcolor"
         android:minWidth="0dp"
         android:text="Download"
+        android:layout_marginRight="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/delete_file_b"
         app:layout_constraintTop_toBottomOf="@+id/file_name_i" />
@@ -35,6 +38,7 @@
         android:minHeight="0dp"
         android:minWidth="0dp"
         android:text="Delete"
+        android:background="@color/MySECcolor"
         app:layout_constraintLeft_toRightOf="@+id/download_file_b"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/file_name_i" />
