--- a/app/src/main/res/layout/fragment_syllabus_upload_fragment.xml
+++ b/app/src/main/res/layout/fragment_syllabus_upload_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:text="Upload Files"
+        android:text="Upload Syllabus/ Files"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"  />
