--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
+    android:background="#fff"
     tools:context=".About">
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_margin="20dp"
         android:layout_height="wrap_content"
+        card_view:cardElevation="10dp"
         card_view:cardCornerRadius="4dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Md. Ali Azad"
+            android:text="Ali Azad and Shushil"
             android:textSize="15dp"
             />
     </LinearLayout>
