--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/myseclogo"
+        android:src="@drawable/secofficial"
         android:layout_gravity="center"
         />
     <!--<LinearLayout
