--- a/app/src/main/res/layout/activity_syllabus.xml
+++ b/app/src/main/res/layout/activity_syllabus.xml
@@ -38,14 +38,38 @@
         <fragment
             android:id="@+id/fragment"
             android:name="com.example.admin.mysecazadshushil.Syllabus_upload_frag"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:layout="@layout/fragment_syllabus_upload_fragment" />
-
-        <fragment
-            android:id="@+id/fragment2"
-            android:name="com.example.admin.mysecazadshushil.Syllabus_viewfil_frag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_syllabus_view_files_fragment" />
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="5dp"
+        android:id="@+id/syllabusvisibledel"
+        android:visibility="gone"
+        >
+    <fragment
+        android:name="com.example.admin.mysecazadshushil.Syllabus_view_fg_ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_syllabus_view_files_fragment_admin"
+        />
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="5dp"
+        android:id="@+id/syllabusvisibleuser"
+        >
+    <fragment
+        android:id="@+id/usertoshow"
+        android:name="com.example.admin.mysecazadshushil.Syllabus_viewfil_frag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_syllabus_view_files_fragment" />
+    </android.support.v7.widget.CardView>
 </LinearLayout>
