--- a/app/src/main/res/layout/fragment_syllabus_upload_fragment.xml
+++ b/app/src/main/res/layout/fragment_syllabus_upload_fragment.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Syllabus">
+    tools:context=".Syllabus"
+    android:layout_gravity="center"
+    >
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="5dp"
+        android:id="@+id/syllabusvisiblein"
+        android:visibility="gone"
+        >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
     <TextView
         android:id="@+id/heading_upload"
         android:layout_width="wrap_content"
@@ -13,11 +29,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:text="Upload Syllabus/ Files"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"  />
+         />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/file_name_lv"
@@ -27,25 +42,40 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:textColorHint="@color/MySECcolor"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heading_upload">
+        android:layout_gravity="center"
+        >
         <android.support.design.widget.TextInputEditText
             android:id="@+id/file_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter file name from downloads, pictures, music or movies folders" />
     </android.support.design.widget.TextInputLayout>
-    <Button
-        android:id="@+id/upload_b"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@color/MySECcolor"
-        android:textColor="#ffff"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/file_name_lv"
-        android:text="Upload File"/>
-</android.support.constraint.ConstraintLayout>
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentTop="true"
+            android:paddingRight="5dp"
+            android:layout_marginBottom="10dp"
+            card_view:cardCornerRadius="4dp"
+            card_view:contentPaddingLeft="10dp"
+            card_view:contentPaddingRight="10dp"
+            card_view:cardBackgroundColor="@color/MySECcolor"
+            android:layout_gravity="center"
+            >
+        <Button
+            android:id="@+id/upload_b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/MySECcolor"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#ffff"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:text="Upload File" />
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
