--- a/app/src/main/res/menu/teacher_search_toolbar.xml
+++ b/app/src/main/res/menu/teacher_search_toolbar.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".TeachersListCSE"
     >
-<item
-    android:id="@+id/tech_search"
-    app:showAsAction="always|collapseActionView"
-    android:icon="@drawable/search"
-    android:title="search"
-    app:actionViewClass="android.support.v7.weidget.SearchView" />
+    <item
+        android:id="@+id/tech_search"
+        android:icon="@drawable/search"
+        android:title="search" />
 </menu>
