--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -278,6 +278,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:id="@+id/schedule"
+                            android:onClick="openschedule"
                             >
                             <LinearLayout
                                 android:layout_width="80dp"
