--- a/app/src/main/res/layout/list_layout_schedule.xml
+++ b/app/src/main/res/layout/list_layout_schedule.xml
@@ -12,11 +12,12 @@
         android:layout_height="match_parent"
         android:padding="15dp">
 
-        <ImageView
+        <pl.droidsonroids.gif.GifImageView
             android:id="@+id/image"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/tech_list" />
+            android:src="@drawable/clockschedule"
+           />
 
         <TextView
             android:id="@+id/newSubjectTextView"
@@ -49,10 +50,21 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/newSubjectTextView"
-            android:text="time and day"
+            android:text="day"
             android:textColor="#848383"
             android:textSize="15sp"
             android:layout_alignLeft="@+id/newSubjectTextView" />
+
+        <TextView
+            android:id="@+id/timeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/image"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:text="time" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
