--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -12,6 +12,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="5dp"
         android:orientation="horizontal"
+        android:background="#ffff"
         android:id="@+id/webprotext"
         >
 
