--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -379,7 +379,93 @@
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
                 </LinearLayout>
+
+
+
+                <!--second row-->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+                    <android.support.v7.widget.CardView
+                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="wrap_content"
+                        android:layout_margin="20dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/adminpanelcard"
+                        android:visibility="gone"
+                        card_view:cardCornerRadius="4dp">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/admindialog"
+                            android:onClick="openadmnipanel"
+
+                            >
+                            <LinearLayout
+                                android:layout_width="80dp"
+                                android:layout_height="120dp"
+                                android:orientation="vertical"
+                                >
+                                <ImageView
+                                    android:layout_width="80dp"
+                                    android:layout_height="80dp"
+                                    android:src="@drawable/signin"
+                                    android:scaleType="fitXY"
+                                    />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textStyle="bold"
+                                    android:textColor="#000"
+                                    android:text="Admin   Panel"
+                                    android:gravity="center"
+                                    android:layout_gravity="center"
+                                    />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="match_parent"
+                        android:layout_margin="20dp"
+                        android:layout_height="wrap_content"
+                        card_view:cardCornerRadius="4dp">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/notdefined"
+                            android:onClick="openschedule"
+                            android:visibility="gone"
+                            >
+                            <LinearLayout
+                                android:layout_width="80dp"
+                                android:layout_height="120dp"
+                                android:orientation="vertical"
+                                >
+
+                                <ImageView
+                                    android:layout_width="80dp"
+                                    android:layout_height="80dp"
+                                    android:src="@drawable/tech_list"
+                                    android:scaleType="fitXY" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Schedule"
+                                    android:textColor="#000"
+                                    android:textStyle="bold"
+                                    android:gravity="center"
+                                    android:layout_gravity="center"
+                                    />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
+
+                </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
     </ScrollView>
