--- a/app/src/main/res/layout/list_layout_teacher_cse.xml
+++ b/app/src/main/res/layout/list_layout_teacher_cse.xml
@@ -1,19 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
-    <ImageView
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        >
+    <com.joooonho.SelectableRoundedImageView
+        android:id="@+id/tech_list_image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/email"
+        app:sriv_oval="true"/>
+        <!--app:sriv_border_color="@color/MySECcolor"
+        app:sriv_border_width="1dp"-->
+    </LinearLayout>
+   <!-- <ImageView
         android:id="@+id/tech_list_image"
         android:layout_width="109dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:src="@drawable/email" />
+        android:src="@drawable/email" />-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         >
         <android.support.v7.widget.CardView
@@ -22,29 +50,21 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="4dp"
-            android:layout_marginTop="30dp"
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="4dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/tech_list_name"
+                android:text="hello"
+                android:background="@color/MySECcolor"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/Button"
+                android:textColor="#fff"
                 android:textAllCaps="true"
                 />
         </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="40dp"
-
-            android:layout_height="wrap_content"
-            card_view:cardCornerRadius="4dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -54,6 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/tech_list_positon"
+                    android:text="hello position"
                     android:gravity="center"
                     android:textSize="17dp"
                     android:textColor="#000"
@@ -63,10 +84,23 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/tech_list_dept"
+                    android:text="hello position"
+                    android:gravity="center"
+                    android:textSize="16dp"
+                    android:textColor="#2d2c2c"
+                    android:layout_marginBottom="5dp"
+
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/tech_list_contact"
+                    android:text="hello contact"
                     android:gravity="center"
                     />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
     </LinearLayout>
+    </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
