--- a/app/src/main/res/layout/adminpaneldialog.xml
+++ b/app/src/main/res/layout/adminpaneldialog.xml
@@ -113,7 +113,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="TeacherListCSE"
+                                    android:text="Teachers List"
                                     android:textColor="#000"
                                     android:textStyle="bold"
                                     android:gravity="center"
@@ -207,7 +207,9 @@
                         android:layout_width="wrap_content"
                         android:layout_margin="20dp"
                         android:layout_height="wrap_content"
-                        card_view:cardCornerRadius="4dp">
+                        card_view:cardCornerRadius="4dp"
+                        android:visibility="gone"
+                        >
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
