--- a/app/src/main/res/layout/fragment_syllabus_upload_fragment.xml
+++ b/app/src/main/res/layout/fragment_syllabus_upload_fragment.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="5dp"
         android:id="@+id/syllabusvisiblein"
-        android:visibility="gone"
+        android:visibility="visible"
         >
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +33,22 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:text="Upload Syllabus/ Files"
          />
-
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/file_title"
+            android:hint="File Title"
+            android:padding="5dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/edittext_style_merged_focuseandnormal"
+            android:textColor="@color/MySECcolor"
+            />
+        <Spinner
+            android:id="@+id/file_type"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_margin="4dp"
+            />
     <android.support.design.widget.TextInputLayout
         android:id="@+id/file_name_lv"
         android:layout_width="200dp"
