--- a/app/src/main/res/layout/list_layout_holiday.xml
+++ b/app/src/main/res/layout/list_layout_holiday.xml
@@ -54,18 +54,21 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="4dp"
-        android:layout_marginTop="30dp"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,16 +80,7 @@
             android:textAllCaps="true"
             android:text="Eid Vacation"
             />
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="40dp"
 
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -110,6 +104,8 @@
                 android:text="20 days"
                 />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 </LinearLayout>
