admin_application_form

--- a/app/src/main/res/layout/adminpaneldialog.xml
+++ b/app/src/main/res/layout/adminpaneldialog.xml
@@ -208,11 +208,12 @@
                         android:layout_margin="20dp"
                         android:layout_height="wrap_content"
                         card_view:cardCornerRadius="4dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         >
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:id="@+id/staffopen"
                             >
                             <LinearLayout
                                 android:layout_width="match_parent"
