--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,18 +92,20 @@
             />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/adminsingup"
+        >
         <LinearLayout
             android:id="@+id/login_reg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingTop="5dp"
-            android:visibility="gone"
+            android:visibility="visible"
             >
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -115,7 +117,7 @@
                 card_view:cardBackgroundColor="#680101"
                 card_view:cardCornerRadius="4dp">
                 <TextView
-                    android:layout_width="120dp"
+                    android:layout_width="240dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/notreg"
                     android:singleLine="true"
@@ -124,25 +126,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:scrollHorizontally="true"
-                    android:text="Not registered yet? Please, click here"
                     android:textColor="#ffff"
-                    />
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_marginLeft="2dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="10dp"
-                card_view:cardBackgroundColor="@color/colorPrimaryDark"
-                android:layout_height="wrap_content"
-                card_view:cardCornerRadius="4dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="  Sign Up  "
-                    android:textColor="#fff"
-                    android:textStyle="bold"
                     />
             </android.support.v7.widget.CardView>
         </LinearLayout>
@@ -348,11 +332,12 @@
                         android:layout_width="wrap_content"
                         android:layout_margin="20dp"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         card_view:cardCornerRadius="4dp">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:id="@+id/staffopen"
                             >
                             <LinearLayout
                                 android:layout_width="match_parent"
