--- a/app/src/main/res/menu/webmenu.xml
+++ b/app/src/main/res/menu/webmenu.xml
@@ -16,6 +16,11 @@
         android:id="@+id/webforward"
         />
     <item app:showAsAction="always"
+        android:title="Campus Radio"
+        android:icon="@drawable/radio"
+        android:id="@+id/webradio"
+        />
+    <item app:showAsAction="always"
         android:title="home"
         android:icon="@drawable/homeicon"
         android:id="@+id/webhome"
