--- a/app/src/main/res/layout/activity_syllabus.xml
+++ b/app/src/main/res/layout/activity_syllabus.xml
@@ -40,7 +40,8 @@
             android:name="com.example.admin.mysecazadshushil.Syllabus_upload_frag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_syllabus_upload_fragment" />
+            tools:layout="@layout/fragment_syllabus_upload_fragment"
+            />
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
